<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app1_name">Spotify Streamer</string>
    <string name="app2_name">Scores App</string>
    <string name="app3_name">Librarian App</string>
    <string name="app4_name">Build it Bigger</string>
    <string name="app5_name">Bacon Header</string>
    <string name="app6_name">Capstone My Own App</string>
</resources>
