<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="My Nanodegree Apps!"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app1_name"
        android:id="@+id/button"
        android:layout_marginTop="35dp"
        android:textColor="#FFF"
        android:background="#f5a14a"
        android:shadowColor="#000"
        android:shadowRadius="3"
        android:shadowDx="3"
        android:shadowDy="2"
        android:singleLine="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="false"
        android:clickable="true"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:onClick="openApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app2_name"
        android:id="@+id/button2"
        android:textColor="#FFF"
        android:background="#f5a14a"
        android:shadowColor="#000"
        android:shadowRadius="3"
        android:shadowDx="3"
        android:shadowDy="2"
        android:singleLine="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="false"
        android:clickable="true"
        android:layout_below="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:onClick="openApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app3_name"
        android:id="@+id/button3"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        android:background="#f5a14a"
        android:shadowColor="#000"
        android:shadowRadius="3"
        android:shadowDx="3"
        android:shadowDy="2"
        android:singleLine="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="false"
        android:clickable="true"
        android:layout_below="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:onClick="openApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app4_name"
        android:id="@+id/button4"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        android:background="#f5a14a"
        android:shadowColor="#000"
        android:shadowRadius="3"
        android:shadowDx="3"
        android:shadowDy="2"
        android:singleLine="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="false"
        android:clickable="true"
        android:layout_below="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:onClick="openApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app5_name"
        android:id="@+id/button5"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        android:background="#f5a14a"
        android:shadowColor="#000"
        android:shadowRadius="3"
        android:shadowDx="3"
        android:shadowDy="2"
        android:singleLine="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="false"
        android:clickable="true"
        android:layout_below="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:onClick="openApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app6_name"
        android:id="@+id/button6"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        android:background="#d93055"
        android:shadowColor="#000"
        android:shadowRadius="3"
        android:shadowDx="3"
        android:shadowDy="2"
        android:singleLine="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="false"
        android:clickable="true"
        android:layout_below="@+id/button5"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:onClick="openApp"/>

</RelativeLayout>
